# magicaltavern-web

./: Cargo.toml  README.md  index.html
.github/workflows/: build-test-deploy.yml  build-test-rust.yml  deploy-static.yml  test-deploy.yml
src/: main.rs
src/types/: mod.rs
