[package]
name = "magicaltavern-web"
description = "A web-client for interacting with magicaltavern-api. Written in Rust, using yew."
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/nerdsplayingpnp-tud/magicaltavern-web"
readme = "README.md"
keywords = ["yew", "magicaltavern", "nerdsplayingpnp", "tud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
gloo-net = "0.4.0"
wasm-bindgen-futures = "0.4.37"

[dev-dependencies]
trunk = "0.17.5"
